<resources>
    <string name="QQ">QQ</string>
    <string name="_8_20">8-20位（不能全是数字和字母）</string>
    <string name="ab">教学</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">智慧教育</string>
    <string name="app_title">幸福会所</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="baocun">保存</string>
    <string name="baoxiu">报修</string>
    <string name="baoxiuleixing">报修类型</string>
    <string name="baoxiumiaosu">报修描述</string>
    <string name="baoxiuneirong">报修内容</string>
    <string name="baoxiurens">报修人：</string>
    <string name="baoxiurenss">报修人</string>
    <string name="baoxiushijian">报修时间：</string>
    <string name="baoxiuxiangqing">报修详情</string>
    <string name="baoxiuxinxi">报修信息</string>
    <string name="bdyy">报修原因:</string>
    <string name="beizhu">备注：</string>
    <string name="bianji">编辑</string>
    <string name="bjcl">报警处理</string>
    <string name="bjxqs">报警详情</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bts">标题</string>
    <string name="button">Button</string>
    <string name="bx">其他</string>
    <string name="bxcl">报修处理</string>
    <string name="bxlb">报修列表</string>
    <string name="bxlx">报修类型</string>
    <string name="bxlxsf">报修类型</string>
    <string name="bxnr">报修内容</string>
    <string name="bxsj">报修时间：</string>
    <string name="bxxq">报修详情</string>
    <string name="cancle">取消</string>
    <string name="chakandingdan">查看订单</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chuangjianshijian">创建时间：</string>
    <string name="chuliren">处理人:</string>
    <string name="chulirenyuans">处理人员</string>
    <string name="chulizhong">处理中</string>
    <string name="chushengriqi">出生日期</string>
    <string name="commit">确定</string>
    <string name="congbendixiangce">从本地相册获取</string>
    <string name="current_date">当前日期</string>
    <string name="current_time">当前时间</string>
    <string name="cyyy">常用应用</string>
    <string name="cz">重置</string>
    <string name="daichuli">待处理</string>
    <string name="daichulituikuan">待处理退款</string>
    <string name="day">日</string>
    <string name="denglu">登录</string>
    <string name="dianjiafasda">点击配送</string>
    <string name="dianjigenggai">点击加号按钮更改商品图片</string>
    <string name="dianjigenghuan">点击更换头像</string>
    <string name="dianpudizhi22">店铺地址</string>
    <string name="dianpudizhi2231">请输入您的店铺地址</string>
    <string name="dianpumingcheng">店铺名称</string>
    <string name="didian">地点</string>
    <string name="dikoujifen">抵扣积分：</string>
    <string name="dikoujifen1">抵扣积分</string>
    <string name="dingdanbianhao">订单编号：</string>
    <string name="dingdanguanli22">订单管理</string>
    <string name="dingdanitems">订单详情</string>
    <string name="dingdanjine">订单金额：</string>
    <string name="dingdanxiangqing">订单详情</string>
    <string name="dingdanxinxi">订单信息</string>
    <string name="dizhisss">地址：</string>
    <string name="dzlx">地址类型</string>
    <string name="dzlxs">地址类型:</string>
    <string name="endtime">请选择结束时间</string>
    <string name="fenleis">分类：</string>
    <string name="fss">发送</string>
    <string name="fswj">发送文件</string>
    <string name="fuwudizhiss">服务地址</string>
    <string name="fuwufei">服务费</string>
    <string name="fuwuneirongs">服务内容</string>
    <string name="fuwuren">服务人员</string>
    <string name="fuwushang">接受服务商的规范制度，</string>
    <string name="fuwushenhe">服务审核</string>
    <string name="fuwuxiangqing">服务详情</string>
    <string name="fuwuxinxi">服务信息</string>
    <string name="fuwuyaoqiu">服务要求</string>
    <string name="genghuanshouji">更换手机</string>
    <string name="gerenshizhi">个人设置</string>
    <string name="gerenxinxi1">个人信息</string>
    <string name="gg">公共</string>
    <string name="ggqy">公共区域</string>
    <string name="gif_tag">动图</string>
    <string name="grxx">个人信息</string>
    <string name="gwfs">公文发送</string>
    <string name="gwjs">公文接受</string>
    <string name="gwjsss">公文接收</string>
    <string name="hdxqss">活动详情</string>
    <string name="hekhupingjia">客户评价:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hf">回复</string>
    <string name="hfcontent">回复内容</string>
    <string name="hfr">回复人</string>
    <string name="hfsjs">回复时间</string>
    <string name="hint">hint</string>
    <string name="hour">时</string>
    <string name="hqyam">获取验证码</string>
    <string name="huifumiaosu">回复描述</string>
    <string name="huifuneirong">回复内容：</string>
    <string name="huifuren">回复人:</string>
    <string name="huifushijian">回复时间：</string>
    <string name="huifuss">回复</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="jiaoshiqingjia">教师请假</string>
    <string name="jiatingzhuzhi">家庭住址</string>
    <string name="jiazai">加载中...</string>
    <string name="jiedan">接单</string>
    <string name="jieshoudingdan22">接受订单</string>
    <string name="jieshushijian">结束时间</string>
    <string name="jieshushijianss2">结束时间：</string>
    <string name="jifen">积分:</string>
    <string name="jifendikou">积分抵扣</string>
    <string name="jifenshangcheng">积分商城</string>
    <string name="jifenshangchengdingdan">商城订单</string>
    <string name="jinrichengjiao">今日成交订单</string>
    <string name="jinrihaopingshu">今日好评数</string>
    <string name="jinritongji">今日统计</string>
    <string name="jsqj">教师请假</string>
    <string name="jsr">接收人</string>
    <string name="jssjws">结束时间：</string>
    <string name="jtdz">具体地址</string>
    <string name="jujuedingdan2">拒绝订单</string>
    <string name="jujuess">拒绝</string>
    <string name="jujuetuikuan">拒绝退款</string>
    <string name="kaishijiante">开始时间：</string>
    <string name="kaishijs">开始时间：</string>
    <string name="kehuxinxi">客户信息</string>
    <string name="lfile_Cancel">Cancel</string>
    <string name="lfile_ChooseTip">Please select folders path</string>
    <string name="lfile_Detail">detail</string>
    <string name="lfile_FileSize">size :</string>
    <string name="lfile_LItem">item</string>
    <string name="lfile_NotFoundBooks">Please select a file at least</string>
    <string name="lfile_NotFoundPath">The sd card is not available</string>
    <string name="lfile_OK">OK</string>
    <string name="lfile_OutSize">Has reached the maximum number</string>
    <string name="lfile_SelectAll">SelectAll</string>
    <string name="lfile_Selected">selected</string>
    <string name="lfile_UpOneLevel">Up</string>
    <string name="lianxidianhua">联系电话：</string>
    <string name="lianxidianhuassaw">联系电话</string>
    <string name="lianxifs">联系方式:</string>
    <string name="lianxiren">联系人：</string>
    <string name="lishi">历史</string>
    <string name="lxdhs">联系电话</string>
    <string name="lxdhss">联系电话：</string>
    <string name="main_select_1">新订单2</string>
    <string name="main_select_2">服务中1</string>
    <string name="main_select_3">已完成2</string>
    <string name="mendianxinxi">门店信息</string>
    <string name="mendianxinxi22">门店信息</string>
    <string name="mima">密码</string>
    <string name="mingzuss">民族：</string>
    <string name="minute">分</string>
    <string name="month">月</string>
    <string name="mq">煤气</string>
    <string name="nianlingss">年龄：</string>
    <string name="nrs">内容</string>
    <string name="paizhaoshangchuan">拍照上传头像</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_done">完成</string>
    <string name="picture_done_front_num">%1$d/%2$d 完成</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_empty_audio_title">"无音频文件
"</string>
    <string name="picture_empty_title">"无视频或照片
"</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_message_max_num">你最多可以选择%1$s张图片</string>
    <string name="picture_message_video_max_num">你最多可以选择%1$s个视频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_please">请稍候...</string>
    <string name="qd">确定</string>
    <string name="qr">确认</string>
    <string name="qsrbts">请输入标题</string>
    <string name="qsrnrss">请输入内容</string>
    <string name="qsrsjhm">请输入手机号码</string>
    <string name="qsrxmm">请输入新密码</string>
    <string name="qxzfsr">请选择接受人</string>
    <string name="qxzfswj">请选择发送文件</string>
    <string name="sd">水电</string>
    <string name="shoujihao">手机号</string>
    <string name="sz">设置</string>
    <string name="tcdl">退出登录</string>
    <string name="xf">消防</string>
    <string name="xgmm">修改密码</string>
    <string name="xinmima">新密码</string>
    <string name="xxtz">消息通知</string>
    <string name="yzm">验证码</string>
</resources>