<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@+id/back" android:layout_width="@dimen/dp_93" android:layout_height="@dimen/dp_40">
        <ImageView android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:src="@mipmap/btn_nav_back" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/sp_16" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_32" android:text="@string/shoujihao" />
    <EditText android:textSize="@dimen/sp_16" android:textColorHint="#ff999999" android:gravity="center_vertical" android:id="@+id/telphonenumble" android:background="@drawable/logind" android:layout_width="@dimen/dp_312" android:layout_height="@dimen/dp_38" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_25" android:hint="@string/qsrsjhm" android:inputType="number" />
    <View android:background="#ffe0dfdf" android:layout_width="@dimen/dp_312" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_24" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_26" android:text="@string/yzm" />

    <LinearLayout
        android:layout_width="@dimen/dp_312"
        android:layout_height="@dimen/dp_38"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/yanzhengma"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="7.0"
            android:background="@drawable/logind"
            android:gravity="center_vertical"
            android:hint="请输入验证码"
            android:inputType="number"
            android:textColorHint="#ff999999"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/huoquyanzhengma"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:gravity="center"
            android:text="@string/hqyam"
            android:textColor="#ff1e82d2" />
    </LinearLayout>
    <View android:background="#ffe0dfdf" android:layout_width="@dimen/dp_312" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_24" />
    <TextView android:textSize="@dimen/sp_11" android:textColor="#ffe99183" android:id="@+id/yanzhengmatishi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_9" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_26" android:text="@string/xinmima" />
    <EditText android:textSize="@dimen/sp_16" android:textColorHint="#ff999999" android:gravity="center_vertical" android:id="@+id/qingshurumima" android:background="@drawable/logind" android:layout_width="@dimen/dp_312" android:layout_height="@dimen/dp_38" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_25" android:hint="@string/qsrxmm" />
    <View android:background="#ffe0dfdf" android:layout_width="@dimen/dp_312" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_24" />
    <Button android:textSize="@dimen/sp_17" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/xiayibu" android:background="@drawable/login_button" android:layout_width="@dimen/dp_314" android:layout_height="@dimen/dp_43" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_50" android:text="@string/qr" />
</LinearLayout>