<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <comndroid.example.recyclerview.smarteducation.layout.Titlelayout android:id="@+id/titlelayout_1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftimage="@mipmap/btn_nav_back" app:title="@string/sz" />
    <View android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_12" />
    <LinearLayout android:orientation="horizontal" android:id="@+id/xiugaimima1" android:layout_width="fill_parent" android:layout_height="@dimen/dp_48">
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/sp_16" android:textColor="#ff4f4f4f" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_12" android:text="@string/xgmm" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_12" android:src="@mipmap/btn_grxx_go" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <View android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_12" />
    <LinearLayout android:orientation="horizontal" android:id="@+id/xinxiaoxitongzhi" android:layout_width="fill_parent" android:layout_height="@dimen/dp_48">
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/sp_16" android:textColor="#ff4f4f4f" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_12" android:text="@string/xxtz" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@+id/xiaoxitongzhi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_12" android:src="@mipmap/btn_sz_close" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <View android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="#ff4f4f4f" android:gravity="center" android:id="@+id/tuichudenglu" android:layout_width="fill_parent" android:layout_height="@dimen/dp_48" android:text="@string/tcdl" />
    <View android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>