<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_18" android:layout_marginTop="@dimen/dp_15" android:src="@mipmap/img_wpbx_sd" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_27" android:layout_marginTop="@dimen/dp_9" android:layout_toRightOf="@id/iv">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/sp_15" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bdyy" />
                <TextView android:textSize="@dimen/sp_15" android:textColor="#ff333333" android:id="@+id/bxyy" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6">
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff9e9e9e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dzlxs" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff9e9e9e" android:id="@+id/dzlx" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6">
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff9e9e9e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bxsj" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff9e9e9e" android:id="@+id/bxsj" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_9" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@+id/state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:layout_marginRight="@dimen/dp_12" android:text="待处理" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:background="#ffe7e5e5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" />
</LinearLayout>